<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.nativeTTS.NativeTTSFragment">

    <TextView
        android:id="@+id/example_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/example_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/speech_speed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="10dp"
        android:text="@string/speech_speed"
        app:layout_constraintBottom_toTopOf="@+id/available_languages"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/current_speech_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="1.0"
        app:layout_constraintBottom_toBottomOf="@+id/speech_speed_title"
        app:layout_constraintStart_toEndOf="@+id/speech_speed_title" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/speech_seekbar"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/available_languages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/current_speech_speed" />

    <Button
        android:id="@+id/available_languages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/languages"
        app:layout_constraintBottom_toTopOf="@+id/read_now_button"
        app:layout_constraintEnd_toStartOf="@+id/available_voices"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/available_voices"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/voices"
        app:layout_constraintBottom_toTopOf="@+id/read_now_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/available_languages" />

    <Button
        android:id="@+id/read_now_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/read_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>